<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/lib_notification"
        android:icon="@drawable/ic_outline_notifications_24"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/recent"
        android:icon="@drawable/ic_outline_library_books_24"
        android:title="@string/recent"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/member"
        android:icon="@drawable/ic_outline_group_24"
        android:title="@string/members"
        app:showAsAction="ifRoom" />
</menu>