<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sheet.BookReturnSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/book_name"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/book_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_class"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/issue_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_time"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/submit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_time"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/late_book_fine_per_day"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/read_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_book_pdf"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textStyle="bold"/>

    </LinearLayout>

</FrameLayout>