<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:src="@drawable/book" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/submit_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_time"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>